:gear: configurção e ajustes da paginação
